alignment issue fixed

--- a/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.css
+++ b/UI/src/app/shared-module/field-mapping-form/field-mapping-form.component.css
@@ -200,8 +200,6 @@ label.btn-import-label {
   height :28px;
 }
 
-.p-pt-2px{
-  padding-top: 2px;
-}
+
 
 
